--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,146 @@
+body {
+    background-color: white;
+    font-weight: normal;
+    font-family:times;
+}
 
+.page {
+    background-color: Gainsboro;
+    display: inline-block;
+    padding: 10px 40px;
+    border-radius: 10px;
+}
+
+.title {
+    background-color: gray;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.container {
+    background-color: Silver;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 20px 0px;
+}
+
+.search_bar {
+    background-color: gray;
+    width: 80%;
+    padding: 20px;
+    border-radius: 10px;
+    border: 0px;
+    color: black;
+    font-size: 18px;
+}
+
+::placeholder {
+    color: black;
+}
+
+.search_button {
+    background-color: gray;
+    padding: 15px;
+    border-radius: 50%;
+    border: 0px;
+    font-size: 22px;
+    color: white;
+    margin: 0px 5px;
+}
+
+.option {
+    width: 48%;
+    background-color: gray;
+    border: 3px solid gray;
+    padding: 5px;
+    margin: 12px 10px 0px 0px;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.watchlist_title {
+    background-color: gray; 
+    margin: 0; 
+    padding: 5px;
+    text-align: center;
+    color: black;
+    border-radius: 20px; 
+}
+
+.stocks {
+    display: flex;
+    background-color: gray;
+    padding: 10px 20px;
+    border-radius: 20px; 
+    color: black;
+    border: 0px;
+}
+
+
+.status {
+    width: 100px;
+    color: black;
+    margin: 0px 30px;
+    text-align: center;
+    font-size: 22px;
+    border: 0px;
+    font-weight: bold;
+    padding: 5px 0px;
+    border-radius: 10px;
+}
+
+
+.range {
+    background-color: Silver;
+    width: 150px;
+    color: black;
+    margin: 0px;
+    text-align: center;
+    font-size: 18px;
+    border: 0px;
+    font-weight: bold;
+    padding: 8px 0px;
+    border-radius: 10px;
+}
+
+.close {
+    background-color: red;
+    width: 50px;
+    color: white;
+    margin-left: 40px;
+    text-align: center;
+    font-size: 18px;
+    border: 0px;
+    font-weight: bold;
+    padding: 8px 0px;
+    border-radius: 10px;
+}
+
+.info {
+    background-color: gray;
+    padding: 20px 30px;
+    border-radius: 20px; 
+    color: black;
+    font-size: 16px;
+    width: 100%;
+}
+
+table, th, td {
+    text-align: left;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+th {
+    padding: 0px 0px 20px 0px;
+}
+
+.selected {
+    border: 3px solid black;
+}
+.show {
+    display: flex;
+    justify-content: center;
+}
